# simulasi-peternakan

./: CMakeLists.txt  README.md
src/: Mesh.h  Model.h  _main.cpp  glad.c  main.cpp
src/shaders/: fragment_shader.glsl  vertex_shader.glsl
